Add Qase integration configuration to env.example, including API key, project code, base URL, and environment ID.

--- a/env.example
+++ b/env.example
@@ -1,5 +1,10 @@
 AIDBOX_BASE_URL=http://localhost:8080
 AIDBOX_API_KEY=
 AIDBOX_PORTAL_URL=
+
+# Qase Integration
 QASE_API_KEY=
+QASE_PROJECT_CODE=AIDBOX_FORMS
+QASE_BASE_URL=https://api.qase.io
+QASE_ENVIRONMENT_ID=
 
