--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
-    needs: code-quality
+    needs: static-checks
     
     services:
       postgres:
